# chrome-devtools-cli

./: Cargo.toml  Makefile
.github/: FUNDING.yml
Formula/: chrome-devtools.rb
skill/chrome-devtools/: SKILL.md
src/: browser.rs  cdp.rs  client.rs  daemon.rs  friendly.rs  main.rs  protocol.rs
src/commands/: evaluate.rs  input.rs  navigate.rs  pages.rs  screenshot.rs
