[package]
name = "chrome-devtools-cli"
version = "0.1.3"
edition = "2021"
description = "Chrome DevTools Protocol CLI — auto-connects to existing Chrome"
authors = ["Aero <aero.windwalker@gmail.com>"]
license = "MIT"
repository = "https://github.com/aeroxy/chrome-devtools-cli"

[[bin]]
name = "chrome-devtools"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
